feat: setting service bus connection string to load from key vault

--- a/src/PaymentProcessingAPI/appsettings.json
+++ b/src/PaymentProcessingAPI/appsettings.json
@@ -1,15 +1,16 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PaymentProcessingDB;Trusted_Connection=true;MultipleActiveResultSets=true",
-    "ServiceBus": "Endpoint=sb://your-servicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=your-key",
     "Redis": "localhost:6379"
+  },
+  "AzureKeyVault": {
+    "VaultUri": "https://kv-payment-api.vault.azure.net/"
   },
   "AzureEventGrid": {
     "TopicEndpoint": "https://your-eventgrid-topic.eventgrid.azure.net/api/events",
     "AccessKey": "your-eventgrid-access-key"
   },
   "AzureServiceBus": {
-    "ConnectionString": "Endpoint=sb://your-servicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=your-key",
     "PaymentQueue": "payment-queue",
     "RefundQueue": "refund-queue",
     "NotificationQueue": "notification-queue"
