--- a/src/PaymentProcessingAPI/PaymentProcessingAPI.csproj
+++ b/src/PaymentProcessingAPI/PaymentProcessingAPI.csproj
@@ -28,6 +28,8 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="8.0.1" />
     <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.10" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
+    <PackageReference Include="Azure.Identity" Version="1.12.1" />
   </ItemGroup>
 
 </Project>
