feat: adding service bus queues

--- a/src/PaymentProcessingAPI/appsettings.json
+++ b/src/PaymentProcessingAPI/appsettings.json
@@ -15,6 +15,13 @@
     "RefundQueue": "refund-queue",
     "NotificationQueue": "notification-queue"
   },
+  "ServiceBusQueues": {
+    "PaymentProcessed": "payment-processed",
+    "PaymentFailed": "payment-failed",
+    "Notifications": "notifications",
+    "RefundRequests": "refund-requests",
+    "HighValueApproval": "high-value-approval"
+  },
   "PaymentGateway": {
     "ApiKey": "your-payment-gateway-api-key",
     "Environment": "sandbox",
