feat: implement Service Bus integration with multiple queue configurations and test endpoints

--- a/src/PaymentProcessingAPI/appsettings.json
+++ b/src/PaymentProcessingAPI/appsettings.json
@@ -13,14 +13,22 @@
   "AzureServiceBus": {
     "PaymentQueue": "payment-queue",
     "RefundQueue": "refund-queue",
-    "NotificationQueue": "notification-queue"
+    "NotificationQueue": "notification-queue",
+    "PaymentProcessedQueue": "payment-processed-queue",
+    "PaymentFailedQueue": "payment-failed-queue",
+    "NotificationsQueue": "notifications-queue",
+    "RefundRequestsQueue": "refund-requests-queue",
+    "HighValueApprovalQueue": "high-value-approval-queue"
   },
-  "ServiceBusQueues": {
-    "PaymentProcessed": "payment-processed",
-    "PaymentFailed": "payment-failed",
-    "Notifications": "notifications",
-    "RefundRequests": "refund-requests",
-    "HighValueApproval": "high-value-approval"
+  "ServiceBusConfiguration": {
+    "PaymentProcessedQueue": "payment-processed",
+    "PaymentFailedQueue": "payment-failed",
+    "NotificationsQueue": "notifications",
+    "RefundRequestsQueue": "refund-requests",
+    "HighValueApprovalQueue": "high-value-approval",
+    "MaxRetryAttempts": 3,
+    "RetryDelay": "00:00:05",
+    "MaxRetryDelay": "00:05:00"
   },
   "PaymentGateway": {
     "ApiKey": "your-payment-gateway-api-key",
