--- a/src/PaymentProcessingAPI/PaymentProcessingAPI.csproj
+++ b/src/PaymentProcessingAPI/PaymentProcessingAPI.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.10" />
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
     <PackageReference Include="Azure.Identity" Version="1.16.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
